--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-/* CSS Stylesheet */
-body {
-  /* Adding a few temporary CSS properties, these will be changed later*/
-  background-color:transparent;
-  text-align: left;
-  display:block;
-  font-family: sans-serif;
-  font-style: italic;
-}
 
 .button-class {
   background-color: #680c1b; /* Green */
@@ -86,6 +77,11 @@ body {
   display: block;
 }
 
+ul {
+  display: flex;
+  flex-wrap: wrap;
+}
 li {
   list-style: none;
+  flex: 0 1 20%;
 }
