--- a/css/styles.css
+++ b/css/styles.css
@@ -41,13 +41,14 @@
 }
 
 .modal {
-  margin: auto;
   display: inline-block;
   box-sizing: border-box;
   background: #fff;
   padding: 15px;
-  width: 100%;
-  max-width: 700px;
+  width: 600%;
+  height: 400px; 
+  margin-top: 10%;
+  margin-left: 30%; 
   text-align: left;
 }
 
@@ -58,7 +59,7 @@
   background: none;
   color: #777;
   text-decoration: underline;
-}
+}   
 
 .modal h1 {
   margin-top: 0;
